# nothofagus

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Doxyfile  MIGRATION_GLFW_TO_SDL3.md  OPENGL_SHADERS_PLAN.md  OPENGL_UPDATE_CONSIDERATIONS.md  README.md
.github/workflows/: cmake-multi-platform.yml  rendering-tests.yml
assets/: README.md
docs/html/: animation__state_8h.html  animation__state_8h_source.html  animation__state__machine_8h.html  animation__state__machine_8h_source.html  annotated.html  bellota_8h.html  bellota_8h_source.html  canvas_8h.html  canvas_8h_source.html  class_nothofagus_1_1_animated_bellota-members.html  class_nothofagus_1_1_animated_bellota.html  class_nothofagus_1_1_animation_state-members.html  class_nothofagus_1_1_animation_state.html  class_nothofagus_1_1_animation_state_machine-members.html  class_nothofagus_1_1_animation_state_machine.html  class_nothofagus_1_1_bellota-members.html  class_nothofagus_1_1_bellota.html  class_nothofagus_1_1_canvas-members.html  class_nothofagus_1_1_canvas.html  class_nothofagus_1_1_controller-members.html  class_nothofagus_1_1_controller.html  class_nothofagus_1_1_texture-members.html  class_nothofagus_1_1_texture.html  class_nothofagus_1_1_texture_array-members.html  class_nothofagus_1_1_texture_array.html  class_nothofagus_1_1_transform-members.html  class_nothofagus_1_1_transform.html  classes.html  controller_8h.html  controller_8h_source.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  index.html  keyboard_8h.html  keyboard_8h_source.html  (+45 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  enumvalues_a.js  enumvalues_c.js  enumvalues_d.js  (+37 more)
examples/: CMakeLists.txt  animation_state.cpp  animation_state_machine.cpp  hello_animated_bellota.cpp  hello_animation.cpp  hello_animation_state_machine.cpp  hello_custom_font.cpp  hello_direct_texture.cpp  hello_headless.cpp  hello_imgui_rtt.cpp  hello_layers.cpp  hello_nested_render_targets.cpp  hello_nothofagus.cpp  hello_render_to_texture.cpp  hello_screenshot.cpp  hello_terrain.cpp  hello_text.cpp  hello_tilemap.cpp  hello_tilemap2.cpp  hello_tint.cpp  set_layer.cpp  test_create_destroy.cpp  test_gamepad.cpp  test_keyboard.cpp
include/: animation_state.h  animation_state_machine.h  bellota.h  camera.h  canvas.h  controller.h  gamepad.h  heightmap_terrain.h  imgui_draw_callback.h  imgui_font_id.h  imgui_font_source_id.h  keyboard.h  mouse.h  nothofagus.h  render_target.h  screen_size.h  text.h  texture.h  tint.h  transform.h  transform3d.h  world_bellota.h
markdown_docs/: sprite_animations.md
markdown_docs/plans/: gpu_backend_phase1.md  gpu_backend_phase2.md
source/: aa_box.h  animation_state.cpp  animation_state.h  animation_state_machine.cpp  animation_state_machine.h  bellota.cpp  bellota.h  bellota_container.h  bellota_to_mesh.cpp  bellota_to_mesh.h  camera.cpp  canvas.cpp  canvas.h  canvas_impl.cpp  canvas_impl.h  check.h  controller.cpp  dframebuffer.cpp  dframebuffer.h  dmesh.cpp  dmesh.h  dmesh3D.cpp  dmesh3D.h  dmesh3d.cpp  dmesh3d.h  drender_target.cpp  drender_target.h  dtexture.cpp  dtexture.h  dvertex.h  gamepad.cpp  heightmap_terrain.cpp  heightmap_terrain_container.h  heightmap_terrain_to_mesh.cpp  heightmap_terrain_to_mesh.h  imgui_font_manager.cpp  imgui_font_manager.h  imgui_rtt_font_cache.cpp  imgui_rtt_font_cache.h  imgui_rtt_manager.cpp  (+32 more)
source/backends/: glfw_backend.cpp  glfw_backend.h  glfw_gamepad.cpp  glfw_gamepad.h  glfw_keyboard.cpp  glfw_keyboard.h  glfw_mouse.cpp  glfw_mouse.h  headless_backend.cpp  headless_backend.h  keyboard_backend.h  mouse_backend.h  opengl_backend.cpp  opengl_backend.h  opengl_mesh.cpp  opengl_mesh.h  opengl_render_target.h  opengl_texture.cpp  render_backend.h  render_backend_select.h  sdl3_backend.cpp  sdl3_backend.h  sdl3_gamepad.cpp  sdl3_gamepad.h  sdl3_keyboard.cpp  sdl3_keyboard.h  sdl3_mouse.cpp  sdl3_mouse.h  vma_impl.cpp  vulkan_backend.cpp  vulkan_backend.h  vulkan_mesh.h  vulkan_presentation.cpp  vulkan_presentation.h  vulkan_render_target.h  vulkan_texture.h  window_backend.h
source/shaders/: sprite.frag  sprite.vert  sprite_indirect.frag  sprite_tilemap.frag
tests/: CMakeLists.txt  golden_image.cpp  golden_image.h  rendering_tests.cpp
